# content-security-policy

./: .gitignore  .pre-commit-config.yaml  README.md  django_tests_coverage.sh  lib_tests_coverage.sh  pyproject.toml
content_security_policy/: __init__.py  base_classes.py  constants.py  directives.py  exceptions.py  parse.py  patterns.py  sources.py  utils.py  values.py
content_security_policy/django/: middleware.py  settings.py  wsgi.py
content_security_policy/django/auto_src/: base.py
content_security_policy/test/: test_parsing.py  test_policy.py  test_source_list_directives.py  test_sources.py  test_values.py
