[tool.poetry]
name = "content-security-policy"
version = "0.1.1"
description = "Create, maintain, parse and manipulate Content Security Policies"
authors = ["no.shoes <no.shoes@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
watchdog = { version = "^3.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
django = "^4.2.5"

[tool.poetry.extras]
django = ["watchdog"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
